--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "m2Paveleon",
+  "name": "Paveleon",
   "version": "1.0.0",
   "description": "Projects server for frontend of m2 paveleon application",
   "author": "Nika Jorjoliani",
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "fix": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
     "test": "jest",
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
     "build": "nuxt build",
@@ -15,10 +16,12 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "v3.0.0-beta.16",
+    "@nuxtjs/style-resources": "^0.1.2",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "node-sass": "^4.12.0",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "nuxt-svg-loader": "^1.0.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
