--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/auth": "^4.8.1",
+    "@nuxtjs/axios": "^5.5.4",
     "@nuxtjs/pwa": "v3.0.0-beta.16",
     "@nuxtjs/style-resources": "^0.1.2",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "node-sass": "^4.12.0",
     "nuxt": "^2.0.0",
-    "nuxt-svg-loader": "^1.0.1"
+    "nuxt-svg-loader": "^1.0.1",
+    "vue-i18n": "^8.12.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
