--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-sass": "^4.12.0",
     "nuxt": "^2.0.0",
     "nuxt-svg-loader": "^1.0.1",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-i18n": "^8.12.0"
   },
   "devDependencies": {
