--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "@nuxtjs/auth": "^4.8.1",
     "@nuxtjs/axios": "^5.5.4",
     "@nuxtjs/pwa": "v3.0.0-beta.16",
     "@nuxtjs/style-resources": "^0.1.2",
+    "babel-preset-env": "^1.7.0",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "node-sass": "^4.12.0",
@@ -30,8 +33,9 @@
     "@nuxtjs/eslint-config": "^1.0.1",
     "@nuxtjs/eslint-module": "^0.2.1",
     "@vue/test-utils": "^1.0.0-beta.27",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.1.0",
+    "babel-jest": "^24.9.0",
     "eslint": "^5.15.1",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-nuxt": ">=0.4.2",
@@ -40,6 +44,6 @@
     "nodemon": "^1.18.9",
     "prettier": "^1.16.4",
     "sass-loader": "^7.1.0",
-    "vue-jest": "^3.0.3"
+    "vue-jest": "^3.0.4"
   }
 }
