--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@babel/preset-env": "^7.5.5",
     "@nuxtjs/auth": "^4.8.1",
     "@nuxtjs/axios": "^5.5.4",
+    "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "v3.0.0-beta.16",
     "@nuxtjs/style-resources": "^0.1.2",
     "babel-preset-env": "^1.7.0",
     "cross-env": "^5.2.0",
+    "dotenv": "^8.1.0",
     "express": "^4.16.4",
     "node-sass": "^4.12.0",
     "nuxt": "^2.0.0",
