--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "fix": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
     "test": "jest",
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
+    "network": "nuxt --hostname 0.0.0.0 --port 3001",
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate"
