--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "nodemon": "^1.18.9",
     "prettier": "^1.16.4",
     "sass-loader": "^7.1.0",
-    "vue-jest": "^3.0.4"
+    "vue-jest": "^3.0.4",
+    "vue-svg-loader": "^0.12.0"
   }
 }
