--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "network": "nuxt --hostname 0.0.0.0 --port 3001",
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
+    "pm2": "pm2 start ./node_modules/nuxt-start/bin/nuxt-start.js --name Paveleon",
     "generate": "nuxt generate"
   },
   "dependencies": {
@@ -28,6 +29,7 @@
     "express": "^4.16.4",
     "node-sass": "^4.12.0",
     "nuxt": "^2.0.0",
+    "nuxt-start": "^2.9.1",
     "nuxt-svg-loader": "^1.0.1",
     "vue-awesome-swiper": "^3.1.3",
     "vue-i18n": "^8.12.0"
