--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nuxtjs/pwa": "v3.0.0-beta.16",
     "@nuxtjs/style-resources": "^0.1.2",
     "babel-preset-env": "^1.7.0",
+    "cookie-universal-nuxt": "^2.0.17",
     "cross-env": "^5.2.0",
     "dotenv": "^8.1.0",
     "express": "^4.16.4",
