--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^8.1.0",
     "express": "^4.16.4",
     "node-sass": "^4.12.0",
+    "nouislider": "^14.0.2",
     "nuxt": "^2.0.0",
     "nuxt-start": "^2.9.1",
     "nuxt-storage": "^1.2.2",
