--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cross-env": "^5.2.0",
     "dotenv": "^8.1.0",
     "express": "^4.16.4",
+    "hammerjs": "^2.0.8",
     "node-sass": "^4.12.0",
     "nouislider": "^14.0.2",
     "nuxt": "^2.0.0",
@@ -35,7 +36,9 @@
     "nuxt-storage": "^1.2.2",
     "nuxt-svg-loader": "^1.0.1",
     "vue-awesome-swiper": "^3.1.3",
-    "vue-i18n": "^8.12.0"
+    "vue-i18n": "^8.12.0",
+    "vue-scroll-picker": "^0.3.0",
+    "vue2-hammer": "^2.1.2"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.1.2",
