--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "nuxt-svg-loader": "^1.0.1",
     "vue-awesome-swiper": "^3.1.3",
     "vue-i18n": "^8.12.0",
+    "vue-pusher": "^1.0.0",
     "vue-scroll-picker": "^0.3.0",
     "vue2-hammer": "^2.1.2"
   },
