--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^8.1.0",
     "express": "^4.16.4",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.4.1",
     "node-sass": "^4.12.0",
     "nouislider": "^14.0.2",
     "nuxt": "^2.0.0",
@@ -39,6 +40,7 @@
     "vue-i18n": "^8.12.0",
     "vue-pusher": "^1.0.0",
     "vue-scroll-picker": "^0.3.0",
+    "vue-slick": "^1.1.15",
     "vue2-hammer": "^2.1.2"
   },
   "devDependencies": {
