--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/pwa": "v3.0.0-beta.16",
     "@nuxtjs/style-resources": "^0.1.2",
+    "@nuxtjs/toast": "^3.3.0",
     "babel-preset-env": "^1.7.0",
     "cookie-universal-nuxt": "^2.0.17",
     "cross-env": "^5.2.0",
@@ -38,9 +39,11 @@
     "nuxt-svg-loader": "^1.0.1",
     "vue-awesome-swiper": "^3.1.3",
     "vue-i18n": "^8.12.0",
+    "vue-notification": "^1.3.20",
     "vue-pusher": "^1.0.0",
     "vue-scroll-picker": "^0.3.0",
     "vue-slick": "^1.1.15",
+    "vue-toasted": "^1.1.27",
     "vue2-hammer": "^2.1.2"
   },
   "devDependencies": {
