--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.16.4",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
+    "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
     "nouislider": "^14.0.2",
     "nuxt": "^2.0.0",
