--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "nuxt-start": "^2.9.1",
     "nuxt-storage": "^1.2.2",
     "nuxt-svg-loader": "^1.0.1",
+    "svg-pan-zoom": "^3.6.1",
     "vue-awesome-swiper": "^3.1.3",
     "vue-i18n": "^8.12.0",
     "vue-notification": "^1.3.20",
